# qbn

./: .gitignore  README.md  pyproject.toml  qbn.ipynb
src/qbn/: __init__.py  atoms.py  bf.py  datasets.py  network.py  training.py
